add class names to English.properties

--- a/src/main/resources/slogo/languages/English.properties
+++ b/src/main/resources/slogo/languages/English.properties
@@ -6,8 +6,8 @@ Backward=back|bk
 Left=left|lt
 Right=right|rt
 SetHeading=setheading|seth
-SetTowards=towards
-SetPosition=setxy|goto
+SetTowards=towards|SetTowards
+SetPosition=setxy|goto|SetPosition
 PenDown=pendown|pd
 PenUp=penup|pu
 ShowTurtle=showturtle|st
@@ -17,11 +17,11 @@ ClearScreen=clearscreen|cs
 #
 # Turtle Queries
 #
-XCoordinate=xcor
-YCoordinate=ycor
+XCoordinate=xcor|XCoordinate
+YCoordinate=ycor|YCoordinate
 Heading=heading
-IsPenDown=pendown\\?|pendownp
-IsShowing=showing\\?|showingp
+IsPenDown=pendown\\?|pendownp|IsPenDown
+IsShowing=showing\\?|showingp|IsShowing
 #
 # Math Operations
 #
@@ -38,16 +38,16 @@ Cosine=cosine|cos
 Tangent=tangent|tan
 ArcTangent=arctangent|atan
 SquareRoot=squareroot|sqrt
-NaturalLog=log
+NaturalLog=log|NaturalLog
 Power=power|pow
 Pi=pi
 #
 # Boolean Operations
 #
-LessThan=less\\?|\\<
-LessEqual=lessequal\\?|\\<\\=
-GreaterThan=greater\\?|\\>
-GreaterEqual=greaterequal\\?|\\>\\=
+LessThan=less\\?|\\<|LessThan
+LessEqual=lessequal\\?|\\<\\=|LessEqual
+GreaterThan=greater\\?|\\>|GreaterThan
+GreaterEqual=greaterequal\\?|\\>\\=|GreaterEqual
 Equal=equal\\?|\\=\\=
 NotEqual=notequal\\?|\\!\\=
 And=and
@@ -56,10 +56,10 @@ Not=not
 #
 # Variables, Control, and User-Defined Commands
 #
-MakeVariable=make|set
+MakeVariable=make|set|MakeVariable
 Repeat=repeat
 DoTimes=dotimes
 For=for
 If=if
 IfElse=ifelse
-MakeUserInstruction=to
+MakeUserInstruction=to|MakeUserInstruction
